# cliobot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE.md  README.md  app.py  config.example.yml  config.full.yml  config.test.yml  config.yml.example  fullbot.py  pyproject.toml  requirements.txt  schema.sql
cliobot/: config.py  metrics.py
cliobot/bots/: __init__.py  command_handler.py  telegram_bot.py
cliobot/commands/: audio.py  help.py  images.py  session.py  text.py
cliobot/db/: __init__.py  inmemory.py  sqlite.py  utils.py
cliobot/errors/: __init__.py  sentry.py
cliobot/metrics/: __init__.py  mixpanel_metrics.py
cliobot/ollama/: client.py
cliobot/openai/: client.py
cliobot/replicate/: client.py
cliobot/translator/: __init__.py  google.py
cliobot/webui/: client.py
i18n/: en.yml
lib/: baseapp.py  config.py  metrics.py  utils.py
lib/bots/: __init__.py  command_handler.py  models.py  telegram_bot.py
lib/cache/: __init__.py
lib/commands/: __init__.py  audio.py  context.py  help.py  images.py  session.py  text.py
lib/db/: __init__.py  sqlite.py  utils.py
lib/errors/: sentry.py
lib/metrics/: __init__.py  mixpanel_metrics.py
lib/ollama/: client.py
lib/openai/: client.py  commands.py  models.py
lib/replicate/: client.py
lib/storage/: __init__.py  s3.py
lib/translator/: google.py
lib/webui/: client.py
test/: test_command_handler.py  test_ollama_client.py  test_openai_client.py  test_replicate_client.py  test_webui_client.py
