[tool.poetry]
name = "cliobot"
version = "0.1.0"
description = "a modular bot platform for generative AI agents"
authors = ["herval <hervalfreire@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpcore = "^1.0.4"
aiohttp = "^3.9.3"
aiodns = "^3.1.1"
python-i18n = {extras = ["yaml"], version = "^0.3.9"}
pillow = "10.1.0"
pydantic = "^2.6.4"
requests = "^2.31.0"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.1"
retry = "^0.9.2"
deep-translator = "^1.11.4"


[tool.poetry.group.openai.dependencies]
openai = "1.3.9"


[tool.poetry.group.replicate.dependencies]
replicate = "^0.25.0"


[tool.poetry.group.sentry.dependencies]
sentry-sdk = "^1.42.0"


[tool.poetry.group.mixpanel.dependencies]
mixpanel = "^4.10.1"
mixpanel-py-async = "^0.3.0"


[tool.poetry.group.aws.dependencies]
boto3 = "^1.34.66"


[tool.poetry.group.llama.dependencies]
llama-index = "^0.10.20"


[tool.poetry.group.telegram.dependencies]
python-telegram-bot = "20.7"


[tool.poetry.group.redis.dependencies]
redis = "^5.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
